Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> initial
Rule 1     initial -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> impresion PTCOMA
Rule 5     instruccion -> expresionL
Rule 6     instruccion -> ciclo PTCOMA
Rule 7     instruccion -> asignacion PTCOMA
Rule 8     instruccion -> DecFunc PTCOMA
Rule 9     instruccion -> callFunc PTCOMA
Rule 10    instruccion -> empty
Rule 11    DecFunc -> RFUNCTION ID PARIZQ Parametros PARDER block REND
Rule 12    DecFunc -> RFUNCTION ID PARIZQ PARDER block REND
Rule 13    Parametros -> Parametros COMA Parametro
Rule 14    Parametros -> Parametro
Rule 15    Parametro -> ID FPTS Tipo
Rule 16    Parametro -> ID
Rule 17    callFunc -> ID ParametrosFunc
Rule 18    ParametrosFunc -> PARIZQ lstVal PARDER
Rule 19    ParametrosFunc -> PARIZQ PARDER
Rule 20    lstVal -> lstVal COMA expresionL
Rule 21    lstVal -> expresionL
Rule 22    ciclo -> whileSt
Rule 23    whileSt -> RWHILE expresionL block REND
Rule 24    block -> instrucciones
Rule 25    asignacion -> TipoVarible ID asingArray IGUAL expresionL Final
Rule 26    asignacion -> ID asingArray IGUAL expresionL Final
Rule 27    TipoVarible -> RGLOBAL
Rule 28    TipoVarible -> RLOCAL
Rule 29    asingArray -> asingArray PARIZQ ENTERO PARDER
Rule 30    asingArray -> empty
Rule 31    Final -> FPTS Tipo
Rule 32    Final -> empty
Rule 33    Tipo -> RINT
Rule 34    Tipo -> RFLOAT
Rule 35    Tipo -> RBOOL
Rule 36    Tipo -> RCHAR
Rule 37    Tipo -> RSTRING
Rule 38    impresion -> IPRINT PARIZQ val PARDER
Rule 39    impresion -> IPRINTLN PARIZQ val PARDER
Rule 40    val -> val COMA val
Rule 41    val -> expresionL
Rule 42    expresionL -> expresionL AND expresionL
Rule 43    expresionL -> expresionL OR expresionL
Rule 44    expresionL -> NOT expresionL
Rule 45    expresionL -> PARIZQ expresionL PARDER
Rule 46    expresionL -> expresionR
Rule 47    expresionR -> expresionR MAYOR expresionR
Rule 48    expresionR -> expresionR MENOR expresionR
Rule 49    expresionR -> expresionR MAYORIGUAL expresionR
Rule 50    expresionR -> expresionR MENORIGUAL expresionR
Rule 51    expresionR -> expresionR IGUALIGUAL expresionR
Rule 52    expresionR -> expresionR NOIGUAL expresionR
Rule 53    expresionR -> PARIZQ expresionR PARDER
Rule 54    expresionR -> booleano
Rule 55    expresionR -> expresion
Rule 56    expresion -> expresion MAS expresion
Rule 57    expresion -> expresion MENOS expresion
Rule 58    expresion -> expresion DIVIDIDO expresion
Rule 59    expresion -> expresion POR expresion
Rule 60    expresion -> expresion POW expresion
Rule 61    expresion -> expresion MOD expresion
Rule 62    expresion -> MENOS expresion
Rule 63    expresion -> PARIZQ expresion PARDER
Rule 64    expresion -> valor
Rule 65    booleano -> VERDADERO
Rule 66    booleano -> FALSO
Rule 67    valor -> ENTERO
Rule 68    valor -> DECIMAL
Rule 69    valor -> CHAR
Rule 70    valor -> cadena
Rule 71    valor -> nativas
Rule 72    valor -> ID
Rule 73    empty -> <empty>
Rule 74    nativas -> ILOGD PARIZQ expresion PARDER
Rule 75    nativas -> ILOG PARIZQ expresion COMA expresion PARDER
Rule 76    nativas -> ISIN PARIZQ expresion PARDER
Rule 77    nativas -> ICOS PARIZQ expresion PARDER
Rule 78    nativas -> ITAN PARIZQ expresion PARDER
Rule 79    nativas -> ISQRT PARIZQ expresion PARDER
Rule 80    nativas -> casteo
Rule 81    casteo -> IPARSE PARIZQ Tipo COMA expresionL PARDER
Rule 82    casteo -> RTRUNC PARIZQ RINT COMA expresionL PARDER
Rule 83    casteo -> RTYPEOF PARIZQ expresionL PARDER
Rule 84    casteo -> ISTRING PARIZQ expresionL PARDER
Rule 85    casteo -> RFLOATC PARIZQ expresionL PARDER
Rule 86    cadena -> IUPPERCASE PARIZQ expresion PARDER
Rule 87    cadena -> ILOWERCASE PARIZQ expresion PARDER
Rule 88    cadena -> IPARSE PARIZQ ISTRING COMA expresionL PARDER
Rule 89    cadena -> STRING

Terminals, with rules where they appear

AND                  : 42
CHAR                 : 69
COMA                 : 13 20 40 75 81 82 88
DECIMAL              : 68
DIVIDIDO             : 58
ENTERO               : 29 67
FALSO                : 66
FPTS                 : 15 31
ICOS                 : 77
ID                   : 11 12 15 16 17 25 26 72
IGUAL                : 25 26
IGUALIGUAL           : 51
ILOG                 : 75
ILOGD                : 74
ILOWERCASE           : 87
IPARSE               : 81 88
IPRINT               : 38
IPRINTLN             : 39
ISIN                 : 76
ISQRT                : 79
ISTRING              : 84 88
ITAN                 : 78
IUPPERCASE           : 86
MAS                  : 56
MAYOR                : 47
MAYORIGUAL           : 49
MENOR                : 48
MENORIGUAL           : 50
MENOS                : 57 62
MOD                  : 61
NOIGUAL              : 52
NOT                  : 44
OR                   : 43
PARDER               : 11 12 18 19 29 38 39 45 53 63 74 75 76 77 78 79 81 82 83 84 85 86 87 88
PARIZQ               : 11 12 18 19 29 38 39 45 53 63 74 75 76 77 78 79 81 82 83 84 85 86 87 88
POR                  : 59
POW                  : 60
PTCOMA               : 4 6 7 8 9
RBOOL                : 35
RCHAR                : 36
REND                 : 11 12 23
RFLOAT               : 34
RFLOATC              : 85
RFUNCTION            : 11 12
RGLOBAL              : 27
RINT                 : 33 82
RLOCAL               : 28
RSTRING              : 37
RTRUNC               : 82
RTYPEOF              : 83
RWHILE               : 23
STRING               : 89
VERDADERO            : 65
error                : 

Nonterminals, with rules where they appear

DecFunc              : 8
Final                : 25 26
Parametro            : 13 14
Parametros           : 11 13
ParametrosFunc       : 17
Tipo                 : 15 31 81
TipoVarible          : 25
asignacion           : 7
asingArray           : 25 26 29
block                : 11 12 23
booleano             : 54
cadena               : 70
callFunc             : 9
casteo               : 80
ciclo                : 6
empty                : 10 30 32
expresion            : 55 56 56 57 57 58 58 59 59 60 60 61 61 62 63 74 75 75 76 77 78 79 86 87
expresionL           : 5 20 21 23 25 26 41 42 42 43 43 44 45 81 82 83 84 85 88
expresionR           : 46 47 47 48 48 49 49 50 50 51 51 52 52 53
impresion            : 4
initial              : 0
instruccion          : 2 3
instrucciones        : 1 2 24
lstVal               : 18 20
nativas              : 71
val                  : 38 39 40 40
valor                : 64
whileSt              : 22

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . impresion PTCOMA
    (5) instruccion -> . expresionL
    (6) instruccion -> . ciclo PTCOMA
    (7) instruccion -> . asignacion PTCOMA
    (8) instruccion -> . DecFunc PTCOMA
    (9) instruccion -> . callFunc PTCOMA
    (10) instruccion -> . empty
    (38) impresion -> . IPRINT PARIZQ val PARDER
    (39) impresion -> . IPRINTLN PARIZQ val PARDER
    (42) expresionL -> . expresionL AND expresionL
    (43) expresionL -> . expresionL OR expresionL
    (44) expresionL -> . NOT expresionL
    (45) expresionL -> . PARIZQ expresionL PARDER
    (46) expresionL -> . expresionR
    (22) ciclo -> . whileSt
    (25) asignacion -> . TipoVarible ID asingArray IGUAL expresionL Final
    (26) asignacion -> . ID asingArray IGUAL expresionL Final
    (11) DecFunc -> . RFUNCTION ID PARIZQ Parametros PARDER block REND
    (12) DecFunc -> . RFUNCTION ID PARIZQ PARDER block REND
    (17) callFunc -> . ID ParametrosFunc
    (73) empty -> .
    (47) expresionR -> . expresionR MAYOR expresionR
    (48) expresionR -> . expresionR MENOR expresionR
    (49) expresionR -> . expresionR MAYORIGUAL expresionR
    (50) expresionR -> . expresionR MENORIGUAL expresionR
    (51) expresionR -> . expresionR IGUALIGUAL expresionR
    (52) expresionR -> . expresionR NOIGUAL expresionR
    (53) expresionR -> . PARIZQ expresionR PARDER
    (54) expresionR -> . booleano
    (55) expresionR -> . expresion
    (23) whileSt -> . RWHILE expresionL block REND
    (27) TipoVarible -> . RGLOBAL
    (28) TipoVarible -> . RLOCAL
    (65) booleano -> . VERDADERO
    (66) booleano -> . FALSO
    (56) expresion -> . expresion MAS expresion
    (57) expresion -> . expresion MENOS expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POR expresion
    (60) expresion -> . expresion POW expresion
    (61) expresion -> . expresion MOD expresion
    (62) expresion -> . MENOS expresion
    (63) expresion -> . PARIZQ expresion PARDER
    (64) expresion -> . valor
    (67) valor -> . ENTERO
    (68) valor -> . DECIMAL
    (69) valor -> . CHAR
    (70) valor -> . cadena
    (71) valor -> . nativas
    (72) valor -> . ID
    (86) cadena -> . IUPPERCASE PARIZQ expresion PARDER
    (87) cadena -> . ILOWERCASE PARIZQ expresion PARDER
    (88) cadena -> . IPARSE PARIZQ ISTRING COMA expresionL PARDER
    (89) cadena -> . STRING
    (74) nativas -> . ILOGD PARIZQ expresion PARDER
    (75) nativas -> . ILOG PARIZQ expresion COMA expresion PARDER
    (76) nativas -> . ISIN PARIZQ expresion PARDER
    (77) nativas -> . ICOS PARIZQ expresion PARDER
    (78) nativas -> . ITAN PARIZQ expresion PARDER
    (79) nativas -> . ISQRT PARIZQ expresion PARDER
    (80) nativas -> . casteo
    (81) casteo -> . IPARSE PARIZQ Tipo COMA expresionL PARDER
    (82) casteo -> . RTRUNC PARIZQ RINT COMA expresionL PARDER
    (83) casteo -> . RTYPEOF PARIZQ expresionL PARDER
    (84) casteo -> . ISTRING PARIZQ expresionL PARDER
    (85) casteo -> . RFLOATC PARIZQ expresionL PARDER

  ! shift/reduce conflict for IPRINT resolved as shift
  ! shift/reduce conflict for IPRINTLN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for PARIZQ resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RFUNCTION resolved as shift
  ! shift/reduce conflict for RWHILE resolved as shift
  ! shift/reduce conflict for RGLOBAL resolved as shift
  ! shift/reduce conflict for RLOCAL resolved as shift
  ! shift/reduce conflict for VERDADERO resolved as shift
  ! shift/reduce conflict for FALSO resolved as shift
  ! shift/reduce conflict for MENOS resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for IUPPERCASE resolved as shift
  ! shift/reduce conflict for ILOWERCASE resolved as shift
  ! shift/reduce conflict for IPARSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ILOGD resolved as shift
  ! shift/reduce conflict for ILOG resolved as shift
  ! shift/reduce conflict for ISIN resolved as shift
  ! shift/reduce conflict for ICOS resolved as shift
  ! shift/reduce conflict for ITAN resolved as shift
  ! shift/reduce conflict for ISQRT resolved as shift
  ! shift/reduce conflict for RTRUNC resolved as shift
  ! shift/reduce conflict for RTYPEOF resolved as shift
  ! shift/reduce conflict for ISTRING resolved as shift
  ! shift/reduce conflict for RFLOATC resolved as shift
    IPRINT          shift and go to state 11
    IPRINTLN        shift and go to state 13
    NOT             shift and go to state 14
    PARIZQ          shift and go to state 12
    ID              shift and go to state 18
    RFUNCTION       shift and go to state 19
    $end            reduce using rule 73 (empty -> .)
    RWHILE          shift and go to state 22
    RGLOBAL         shift and go to state 23
    RLOCAL          shift and go to state 24
    VERDADERO       shift and go to state 25
    FALSO           shift and go to state 26
    MENOS           shift and go to state 27
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CHAR            shift and go to state 31
    IUPPERCASE      shift and go to state 34
    ILOWERCASE      shift and go to state 35
    IPARSE          shift and go to state 36
    STRING          shift and go to state 38
    ILOGD           shift and go to state 39
    ILOG            shift and go to state 40
    ISIN            shift and go to state 41
    ICOS            shift and go to state 42
    ITAN            shift and go to state 43
    ISQRT           shift and go to state 44
    RTRUNC          shift and go to state 46
    RTYPEOF         shift and go to state 47
    ISTRING         shift and go to state 37
    RFLOATC         shift and go to state 48

  ! IPRINT          [ reduce using rule 73 (empty -> .) ]
  ! IPRINTLN        [ reduce using rule 73 (empty -> .) ]
  ! NOT             [ reduce using rule 73 (empty -> .) ]
  ! PARIZQ          [ reduce using rule 73 (empty -> .) ]
  ! ID              [ reduce using rule 73 (empty -> .) ]
  ! RFUNCTION       [ reduce using rule 73 (empty -> .) ]
  ! RWHILE          [ reduce using rule 73 (empty -> .) ]
  ! RGLOBAL         [ reduce using rule 73 (empty -> .) ]
  ! RLOCAL          [ reduce using rule 73 (empty -> .) ]
  ! VERDADERO       [ reduce using rule 73 (empty -> .) ]
  ! FALSO           [ reduce using rule 73 (empty -> .) ]
  ! MENOS           [ reduce using rule 73 (empty -> .) ]
  ! ENTERO          [ reduce using rule 73 (empty -> .) ]
  ! DECIMAL         [ reduce using rule 73 (empty -> .) ]
  ! CHAR            [ reduce using rule 73 (empty -> .) ]
  ! IUPPERCASE      [ reduce using rule 73 (empty -> .) ]
  ! ILOWERCASE      [ reduce using rule 73 (empty -> .) ]
  ! IPARSE          [ reduce using rule 73 (empty -> .) ]
  ! STRING          [ reduce using rule 73 (empty -> .) ]
  ! ILOGD           [ reduce using rule 73 (empty -> .) ]
  ! ILOG            [ reduce using rule 73 (empty -> .) ]
  ! ISIN            [ reduce using rule 73 (empty -> .) ]
  ! ICOS            [ reduce using rule 73 (empty -> .) ]
  ! ITAN            [ reduce using rule 73 (empty -> .) ]
  ! ISQRT           [ reduce using rule 73 (empty -> .) ]
  ! RTRUNC          [ reduce using rule 73 (empty -> .) ]
  ! RTYPEOF         [ reduce using rule 73 (empty -> .) ]
  ! ISTRING         [ reduce using rule 73 (empty -> .) ]
  ! RFLOATC         [ reduce using rule 73 (empty -> .) ]

    initial                        shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    impresion                      shift and go to state 4
    expresionL                     shift and go to state 5
    ciclo                          shift and go to state 6
    asignacion                     shift and go to state 7
    DecFunc                        shift and go to state 8
    callFunc                       shift and go to state 9
    empty                          shift and go to state 10
    expresionR                     shift and go to state 15
    whileSt                        shift and go to state 16
    TipoVarible                    shift and go to state 17
    booleano                       shift and go to state 20
    expresion                      shift and go to state 21
    valor                          shift and go to state 28
    cadena                         shift and go to state 32
    nativas                        shift and go to state 33
    casteo                         shift and go to state 45

state 1

    (0) S' -> initial .



state 2

    (1) initial -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . impresion PTCOMA
    (5) instruccion -> . expresionL
    (6) instruccion -> . ciclo PTCOMA
    (7) instruccion -> . asignacion PTCOMA
    (8) instruccion -> . DecFunc PTCOMA
    (9) instruccion -> . callFunc PTCOMA
    (10) instruccion -> . empty
    (38) impresion -> . IPRINT PARIZQ val PARDER
    (39) impresion -> . IPRINTLN PARIZQ val PARDER
    (42) expresionL -> . expresionL AND expresionL
    (43) expresionL -> . expresionL OR expresionL
    (44) expresionL -> . NOT expresionL
    (45) expresionL -> . PARIZQ expresionL PARDER
    (46) expresionL -> . expresionR
    (22) ciclo -> . whileSt
    (25) asignacion -> . TipoVarible ID asingArray IGUAL expresionL Final
    (26) asignacion -> . ID asingArray IGUAL expresionL Final
    (11) DecFunc -> . RFUNCTION ID PARIZQ Parametros PARDER block REND
    (12) DecFunc -> . RFUNCTION ID PARIZQ PARDER block REND
    (17) callFunc -> . ID ParametrosFunc
    (73) empty -> .
    (47) expresionR -> . expresionR MAYOR expresionR
    (48) expresionR -> . expresionR MENOR expresionR
    (49) expresionR -> . expresionR MAYORIGUAL expresionR
    (50) expresionR -> . expresionR MENORIGUAL expresionR
    (51) expresionR -> . expresionR IGUALIGUAL expresionR
    (52) expresionR -> . expresionR NOIGUAL expresionR
    (53) expresionR -> . PARIZQ expresionR PARDER
    (54) expresionR -> . booleano
    (55) expresionR -> . expresion
    (23) whileSt -> . RWHILE expresionL block REND
    (27) TipoVarible -> . RGLOBAL
    (28) TipoVarible -> . RLOCAL
    (65) booleano -> . VERDADERO
    (66) booleano -> . FALSO
    (56) expresion -> . expresion MAS expresion
    (57) expresion -> . expresion MENOS expresion
    (58) expresion -> . expresion DIVIDIDO expresion
    (59) expresion -> . expresion POR expresion
    (60) expresion -> . expresion POW expresion
    (61) expresion -> . expresion MOD expresion
    (62) expresion -> . MENOS expresion
    (63) expresion -> . PARIZQ expresion PARDER
    (64) expresion -> . valor
    (67) valor -> . ENTERO
    (68) valor -> . DECIMAL
    (69) valor -> . CHAR
    (70) valor -> . cadena
    (71) valor -> . nativas
    (72) valor -> . ID
    (86) cadena -> . IUPPERCASE PARIZQ expresion PARDER
    (87) cadena -> . ILOWERCASE PARIZQ expresion PARDER
    (88) cadena -> . IPARSE PARIZQ ISTRING COMA expresionL PARDER
    (89) cadena -> . STRING
    (74) nativas -> . ILOGD PARIZQ expresion PARDER
    (75) nativas -> . ILOG PARIZQ expresion COMA expresion PARDER
    (76) nativas -> . ISIN PARIZQ expresion PARDER
    (77) nativas -> . ICOS PARIZQ expresion PARDER
    (78) nativas -> . ITAN PARIZQ expresion PARDER
    (79) nativas -> . ISQRT PARIZQ expresion PARDER
    (80) nativas -> . casteo
    (81) casteo -> . IPARSE PARIZQ Tipo COMA expresionL PARDER
    (82) casteo -> . RTRUNC PARIZQ RINT COMA expresionL PARDER
    (83) casteo -> . RTYPEOF PARIZQ expresionL PARDER
    (84) casteo -> . ISTRING PARIZQ expresionL PARDER
    (85) casteo -> . RFLOATC PARIZQ expresionL PARDER

  ! shift/reduce conflict for IPRINT resolved as shift
  ! shift/reduce conflict for IPRINTLN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for PARIZQ resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RFUNCTION resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (initial -> instrucciones .)
  ! shift/reduce conflict for RWHILE resolved as shift
  ! shift/reduce conflict for RGLOBAL resolved as shift
  ! shift/reduce conflict for RLOCAL resolved as shift
  ! shift/reduce conflict for VERDADERO resolved as shift
  ! shift/reduce conflict for FALSO resolved as shift
  ! shift/reduce conflict for MENOS resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for IUPPERCASE resolved as shift
  ! shift/reduce conflict for ILOWERCASE resolved as shift
  ! shift/reduce conflict for IPARSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ILOGD resolved as shift
  ! shift/reduce conflict for ILOG resolved as shift
  ! shift/reduce conflict for ISIN resolved as shift
  ! shift/reduce conflict for ICOS resolved as shift
  ! shift/reduce conflict for ITAN resolved as shift
  ! shift/reduce conflict for ISQRT resolved as shift
  ! shift/reduce conflict for RTRUNC resolved as shift
  ! shift/reduce conflict for RTYPEOF resolved as shift
  ! shift/reduce conflict for ISTRING resolved as shift
  ! shift/reduce conflict for RFLOATC resolved as shift
    $end            reduce using rule 1 (initial -> instrucciones .)
    IPRINT          shift and go to state 11
    IPRINTLN        shift and go to state 13
    NOT             shift and go to state 14
    PARIZQ          shift and go to state 12
    ID              shift and go to state 18
    RFUNCTION       shift and go to state 19
    RWHILE          shift and go to state 22
    RGLOBAL         shift and go to state 23
    RLOCAL          shift and go to state 24
    VERDADERO       shift and go to state 25
    FALSO           shift and go to state 26
    MENOS           shift and go to state 27
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    CHAR            shift and go to state 31
    IUPPERCASE      shift and go to state 34
    ILOWERCASE      shift and go to state 35
    IPARSE          shift and go to state 36
    STRING          shift and go to state 38
    ILOGD           shift and go to state 39
    ILOG            shift and go to state 40
    ISIN            shift and go to state 41
    ICOS            shift and go to state 42
    ITAN            shift and go to state 43
    ISQRT           shift and go to state 44
    RTRUNC          shift and go to state 46
    RTYPEOF         shift and go to state 47
    ISTRING         shift and go to state 37
    RFLOATC         shift and go to state 48

  ! IPRINT          [ reduce using rule 73 (empty -> .) ]
  ! IPRINTLN        [ reduce using rule 73 (empty -> .) ]
  ! NOT             [ reduce using rule 73 (empty -> .) ]
  ! PARIZQ          [ reduce using rule 73 (empty -> .) ]
  ! ID              [ reduce using rule 73 (empty -> .) ]
  ! RFUNCTION       [ reduce using rule 73 (empty -> .) ]
  ! RWHILE          [ reduce using rule 73 (empty -> .) ]
  ! RGLOBAL         [ reduce using rule 73 (empty -> .) ]
  ! RLOCAL          [ reduce using rule 73 (empty -> .) ]
  ! VERDADERO       [ reduce using rule 73 (empty -> .) ]
  ! FALSO           [ reduce using rule 73 (empty -> .) ]
  ! MENOS           [ reduce using rule 73 (empty -> .) ]
  ! ENTERO          [ reduce using rule 73 (empty -> .) ]
  ! DECIMAL         [ reduce using rule 73 (empty -> .) ]
  ! CHAR            [ reduce using rule 73 (empty -> .) ]
  ! IUPPERCASE      [ reduce using rule 73 (empty -> .) ]
  ! ILOWERCASE      [ reduce using rule 73 (empty -> .) ]
  ! IPARSE          [ reduce using rule 73 (empty -> .) ]
  ! STRING          [ reduce using rule 73 (empty -> .) ]
  ! ILOGD           [ reduce using rule 73 (empty -> .) ]
  ! ILOG            [ reduce using rule 73 (empty -> .) ]
  ! ISIN            [ reduce using rule 73 (empty -> .) ]
  ! ICOS            [ reduce using rule 73 (empty -> .) ]
  ! ITAN            [ reduce using rule 73 (empty -> .) ]
  ! ISQRT           [ reduce using rule 73 (empty -> .) ]
  ! RTRUNC          [ reduce using rule 73 (empty -> .) ]
  ! RTYPEOF         [ reduce using rule 73 (empty -> .) ]
  ! ISTRING         [ reduce using rule 73 (empty -> .) ]
  ! RFLOATC         [ reduce using rule 73 (empty -> .) ]
  ! $end            [ reduce using rule 73 (empty -> .) ]

    instruccion                    shift and go to state 49
    impresion                      shift and go to state 4
    expresionL                     shift and go to state 5
    ciclo                          shift and go to state 6
    asignacion                     shift and go to state 7
    DecFunc                        shift and go to state 8
    callFunc                       shift and go to state 9
    empty                          shift and go to state 10
    expresionR                     shift and go to state 15
    whileSt                        shift and go to state 16
    TipoVarible                    shift and go to state 17
    booleano                       shift and go to state 20
    expresion                      shift and go to state 21
    valor                          shift and go to state 28
    cadena                         shift and go to state 32
    nativas                        shift and go to state 33
    casteo                         shift and go to state 45

state 3

    (3) instrucciones -> instruccion .

    IPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    IPRINTLN        reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RGLOBAL         reduce using rule 3 (instrucciones -> instruccion .)
    RLOCAL          reduce using rule 3 (instrucciones -> instruccion .)
    VERDADERO       reduce using rule 3 (instrucciones -> instruccion .)
    FALSO           reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    CHAR            reduce using rule 3 (instrucciones -> instruccion .)
    IUPPERCASE      reduce using rule 3 (instrucciones -> instruccion .)
    ILOWERCASE      reduce using rule 3 (instrucciones -> instruccion .)
    IPARSE          reduce using rule 3 (instrucciones -> instruccion .)
    STRING          reduce using rule 3 (instrucciones -> instruccion .)
    ILOGD           reduce using rule 3 (instrucciones -> instruccion .)
    ILOG            reduce using rule 3 (instrucciones -> instruccion .)
    ISIN            reduce using rule 3 (instrucciones -> instruccion .)
    ICOS            reduce using rule 3 (instrucciones -> instruccion .)
    ITAN            reduce using rule 3 (instrucciones -> instruccion .)
    ISQRT           reduce using rule 3 (instrucciones -> instruccion .)
    RTRUNC          reduce using rule 3 (instrucciones -> instruccion .)
    RTYPEOF         reduce using rule 3 (instrucciones -> instruccion .)
    ISTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RFLOATC         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    REND            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> impresion . PTCOMA

    PTCOMA          shift and go to state 50


state 5

    (5) instruccion -> expresionL .
    (42) expresionL -> expresionL . AND expresionL
    (43) expresionL -> expresionL . OR expresionL

    IPRINT          reduce using rule 5 (instruccion -> expresionL .)
    IPRINTLN        reduce using rule 5 (instruccion -> expresionL .)
    NOT             reduce using rule 5 (instruccion -> expresionL .)
    PARIZQ          reduce using rule 5 (instruccion -> expresionL .)
    ID              reduce using rule 5 (instruccion -> expresionL .)
    RFUNCTION       reduce using rule 5 (instruccion -> expresionL .)
    RWHILE          reduce using rule 5 (instruccion -> expresionL .)
    RGLOBAL         reduce using rule 5 (instruccion -> expresionL .)
    RLOCAL          reduce using rule 5 (instruccion -> expresionL .)
    VERDADERO       reduce using rule 5 (instruccion -> expresionL .)
    FALSO           reduce using rule 5 (instruccion -> expresionL .)
    MENOS           reduce using rule 5 (instruccion -> expresionL .)
    ENTERO          reduce using rule 5 (instruccion -> expresionL .)
    DECIMAL         reduce using rule 5 (instruccion -> expresionL .)
    CHAR            reduce using rule 5 (instruccion -> expresionL .)
    IUPPERCASE      reduce using rule 5 (instruccion -> expresionL .)
    ILOWERCASE      reduce using rule 5 (instruccion -> expresionL .)
    IPARSE          reduce using rule 5 (instruccion -> expresionL .)
    STRING          reduce using rule 5 (instruccion -> expresionL .)
    ILOGD           reduce using rule 5 (instruccion -> expresionL .)
    ILOG            reduce using rule 5 (instruccion -> expresionL .)
    ISIN            reduce using rule 5 (instruccion -> expresionL .)
    ICOS            reduce using rule 5 (instruccion -> expresionL .)
    ITAN            reduce using rule 5 (instruccion -> expresionL .)
    ISQRT           reduce using rule 5 (instruccion -> expresionL .)
    RTRUNC          reduce using rule 5 (instruccion -> expresionL .)
    RTYPEOF         reduce using rule 5 (instruccion -> expresionL .)
    ISTRING         reduce using rule 5 (instruccion -> expresionL .)
    RFLOATC         reduce using rule 5 (instruccion -> expresionL .)
    $end            reduce using rule 5 (instruccion -> expresionL .)
    REND            reduce using rule 5 (instruccion -> expresionL .)
    AND             shift and go to state 51
    OR              shift and go to state 52


state 6

    (6) instruccion -> ciclo . PTCOMA

    PTCOMA          shift and go to state 53


state 7

    (7) instruccion -> asignacion . PTCOMA

    PTCOMA          shift and go to state 54


state 8

    (8) instruccion -> DecFunc . PTCOMA

    PTCOMA          shift and go to state 55


state 9

    (9) instruccion -> callFunc . PTCOMA

    PTCOMA          shift and go to state 56


state 10

    (10) instruccion -> empty .

    IPRINT          reduce using rule 10 (instruccion -> empty .)
    IPRINTLN        reduce using rule 10 (instruccion -> empty .)
    NOT             reduce using rule 10 (instruccion -> empty .)
    PARIZQ          reduce using rule 10 (instruccion -> empty .)
    ID              reduce using rule 10 (instruccion -> empty .)
    RFUNCTION       reduce using rule 10 (instruccion -> empty .)
    RWHILE          reduce using rule 10 (instruccion -> empty .)
    RGLOBAL         reduce using rule 10 (instruccion -> empty .)
    RLOCAL          reduce using rule 10 (instruccion -> empty .)
    VERDADERO       reduce using rule 10 (instruccion -> empty .)
    FALSO           reduce using rule 10 (instruccion -> empty .)
    MENOS           reduce using rule 10 (instruccion -> empty .)
    ENTERO          reduce using rule 10 (instruccion -> empty .)
    DECIMAL         reduce using rule 10 (instruccion -> empty .)
    CHAR            reduce using rule 10 (instruccion -> empty .)
    IUPPERCASE      reduce using rule 10 (instruccion -> empty .)
    ILOWERCASE      reduce using rule 10 (instruccion -> empty .)
    IPARSE          reduce using rule 10 (instruccion -> empty .)
    STRING          reduce using rule 10 (instruccion -> empty .)
    ILOGD           reduce using rule 10 (instruccion -> empty .)
    ILOG            reduce using rule 10 (instruccion -> empty .)
    ISIN            reduce using rule 10 (instruccion -> empty .)
    ICOS            reduce using rule 10 (instruccion -> empty .)
    ITAN            reduce using rule 10 (instruccion -> empty .)
    ISQRT           reduce using rule 10 (instruccion -> empty .)
    RTRUNC          reduce using rule 10 (instruccion -> empty .)
    RTYPEOF         reduce using rule 10 (instruccion -> empty .)
    ISTRING         reduce using rule 10 (instruccion -> empty .)
    RFLOATC         reduce using rule 10 (instruccion -> empty .)
    $end            reduce using rule 10 (instruccion -> empty .)
    REND            reduce using rule 10 (instruccion -> empty .)


state 11

    (38) impresion -> IPRINT . PARIZQ val PARDER

    PARIZQ          shift and go to state 57


state 12
